# aws_workshop_api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  config.py  database.py  db_upgrade.py  main.py  models.py  schemas.py  seed.py
app/routers/: customers.py  orders.py  products.py
docs/: sprint2-verificacion-api.md  sprint3-verificacion-api-gateway.md
