[project]
name = "next-drones-api"
version = "0.1.0"
description = "FastAPI REST service for Next Drones Shop — Sprint 2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.32.1",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.6.1",
]

[tool.uv]
package = false
